# cdt

./: .backportrc.json  .clang-format  .gitattributes  .gitignore  .project  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Downloads.md  GitHubMigration.md  Jenkinsfile  Jenkinsfile.disabled  LICENSE  NOTICE  NOTICE.md  POLICY.md  README.adoc  README.md  RELEASING.md  SECURITY.md  StandaloneDebugger.md  TESTING.md  check_code_cleanliness.sh  disable_intro_in_tests.ini  dsf.debug.options  dstoreTargets-git.xml  groups  org.eclipse.cdt.codan.checkers.patch  org.eclipse.cdt.codan.core.patch  org.eclipse.cdt.patch  plugin.xml  pom.xml  project.config  readme.txt  terminals-eclipse-4.4.x-luna.target  terminals.psf
.github/: dependabot.yml  github-actions-demo.yml
FAQ/: Indexer.md  README.md
NewAndNoteworthy/: CDT-10.0.md  CDT-10.1.md  CDT-10.2.md  CDT-10.3.md  CDT-10.4.md  CDT-10.5.md  CDT-10.6.md  CDT-10.7.md  CDT-11.0.md  CDT-11.1.md  CDT-11.2.md  CDT-11.3.md  CDT-11.4.md  CDT-11.5.md  CDT-11.6.md  CDT-11.7.md  CDT-12.0.md  CDT-12.1.md  CDT-12.2.md  CDT-12.3.md  CDT-12.4.md  CDT-12.5.md  CDT-12.6.md  CHANGELOG-API.md  README.md
admin/: .project  findbugs-exclude.xml  pom-build.xml  pom-config.xml
bundles/: .gitignore  pom.xml
cmake/: .project  README.txt  pom.xml
cmake/org.eclipse.cdt.cmake.core/templates/simple/: .clangd  CMakeLists.txt  config.h.in  main.cpp  manifest.xml
cmake/org.eclipse.cdt.cmake.ui.tests/projects/NestedProject/App1/: CMakeLists.txt  app1.c  app1.h.in
cmake/org.eclipse.cdt.cmake.ui.tests/projects/NestedProject/App2/: CMakeLists.txt  app2.c  app2.h.in
cmake/org.eclipse.cdt.cmake.ui.tests/projects/SimpleProject/: CMakeLists.txt  simple.c  simple.h.in
codan/: pom.xml
core/: pom.xml
cross/: pom.xml
debug/: pom.xml
discovery/: readme.txt
docker/: .dockerignore  Readme.md  build-images.sh  deploy-images.sh  toolchains.xml
dsf/: pom.xml
dsf-gdb/: pom.xml
features/: .project  pom.xml
jsoncdb/: .project  pom.xml
jtag/: pom.xml
launch/: pom.xml
launchbar/: pom.xml
(+28874 files in other folders)
